fix: Display Search bar above nav menu on mobile
Display search bar above navigation menu on mobile.
Make it respond properly when hamburger menu is clicked.

--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -19,6 +19,7 @@
 
 .nav-menu{
     text-align: right;
+    order: 2;
 }
 
 /* Change bootstrap default colors for dropdown menu*/
@@ -43,6 +44,9 @@
 }
 
 /* Search bar styles */
+.search-form{   
+    order: 1;
+}
 .search-bar {
     display: flex;
     align-items: center;
